--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 115200
+lib_deps = gyverlibs/GyverSegment@^1.4
