--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,8 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-monitor_speed = 115200
-lib_deps = gyverlibs/GyverSegment@^1.4
+monitor_speed = 9600
+lib_deps = 
+	gyverlibs/GyverSegment@^1.4
+	tinyu-zhao/TinyGPSPlus-ESP32@^0.0.2
+	knolleary/PubSubClient@^2.8
